# pipeline-kit

./: .gitignore  LICENSE  README.md  package.json  pnpm-lock.yaml  tsconfig.base.json
.github/workflows/: ci.yml  release.yml
apps/desktop/: components.json  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
apps/desktop/src/: App.tsx  dashboard-context.tsx  eventStream.ts  fallbackData.ts  legacy.css  main.tsx  sidecarApi.ts  styles.css
apps/desktop/src-tauri/: Cargo.toml  DEPLOYMENT.md  desktop-template.desktop  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs  menu.rs
apps/desktop/src/components/layout/: AppShell.tsx  ProjectSidebar.tsx  topbar-slots.tsx
apps/desktop/src/components/panels/: AssetsSearchPanel.tsx  BlenderSessionPanel.tsx  BriefPanel.tsx  OperationsPanel.tsx  PipelineRunsPanel.tsx  ProductionBoardPanel.tsx  ProjectPicker.tsx  RecentRendersPanel.tsx  ReviewPanel.tsx  SceneStatePanel.tsx  SettingsPanel.tsx  ShotBoardPanel.tsx
apps/desktop/src/components/ui/: badge.tsx
apps/desktop/src/components/welcome/: SetupChecklist.tsx  Welcome.tsx
apps/desktop/src/layouts/: Layout.tsx  ProjectLayout.tsx
apps/desktop/src/lib/: deep-links.ts  menu-events.ts  renderUrl.ts  updater.ts
apps/desktop/src/views/: AssetsPage.tsx  BlenderPage.tsx  OverviewPage.tsx  ReviewPage.tsx  RunsPage.tsx  WelcomePage.tsx
docs/: PRODUCT_PLAN.md
tools/: sync-version.mjs
