[package]
name = "pipelinekit-desktop"
version = "0.1.2"
description = "PipelineKit desktop shell"
authors = ["PipelineKit"]
edition = "2021"

[lib]
name = "pipelinekit_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-window-state = "2"
dirs = "6"
dunce = "1"
