[package]
name = "pipelinekit-desktop"
version = "0.3.0"
description = "PipelineKit desktop shell"
authors = ["PipelineKit"]
edition = "2021"

[lib]
name = "pipelinekit_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-deep-link = "2"
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
tauri-plugin-window-state = "2"
dirs = "6"
dunce = "1"
serde_json = "1"

# Native window effects: macOS vibrancy + Windows 11 Mica.
# The crate compiles on every desktop OS and returns
# `Error::UnsupportedPlatform` when the requested effect is unavailable,
# so we don't need cfg-gated dependency stanzas.
window-vibrancy = "0.6"
